@@ -1,3 +1,9 @@
+Console-1.2.0-rc
+=============================================================
+- Set default LogTarget('HTML');
+- Set default LogLevel(xPDO::LOG_LEVEL_DEBUG);
+
 Console-1.1.0-rc
 =============================================================
 
+- First release
